--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -539,13 +539,16 @@ regexp("https?://discourse\\.\\S*") {
     color: #ddd;
   }
 }
-@-moz-document domain("discourse.slicer.org"),
-domain("discuss.codemirror.net"),
+@-moz-document domain("discuss.codemirror.net"),
 domain("discuss.elastic.co"),
 domain("meta.discourse.org") {
   .title img {
     --shadow: rgba(80, 80, 80, .3);
     filter: drop-shadow(1px 1px 1px var(--shadow)) drop-shadow(-1px 1px 1px var(--shadow)) drop-shadow(1px -1px 1px var(--shadow)) drop-shadow(-1px -1px 1px var(--shadow));
+  }
+@-moz-document domain("discourse.slicer.org") {
+  #banner img {
+    filter: invert(1) contrast(70%) !important;
   }
 }
 @-moz-document domain("forums.docker.com") {
