--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -233,6 +233,7 @@ regexp("https?://discourse\\.\\S*") {
   }
   nav.post-controls .double-button:hover button {
     background: #333;
+    color: #aaa;
   }
   .emoji-picker .section-group button.emoji:hover,
   .emoji-picker .results button.emoji:hover {
@@ -279,7 +280,8 @@ regexp("https?://discourse\\.\\S*") {
   .select-kit.combo-box.category-drop .select-kit-row[data-value="all-categories"],
   .select-kit.combo-box.category-drop .select-kit-row[data-value="no-categories"],
   .names span a, .user-main .about .secondary dt, .group-info .group-info-name,
-  table th, .topic-map .map .number {
+  table th, .topic-map .map .number, .list-cell, .table-heading,
+  .category-list td, .category-list th {
     color: #ccc; /* not important */
   }
   .title, .d-icon, .alert, #banner, #site-text-logo, .alert.alert-info,
@@ -419,6 +421,10 @@ regexp("https?://discourse\\.\\S*") {
     border: 1px solid #d11;
     color: #f11;
   }
+  nav.post-controls button.d-hover, nav.post-controls button:focus {
+    background: #333;
+    color: #aaa;
+  }
   .d-icon-d-liked, nav.post-controls button.has-like,
   nav.post-controls button.has-like .fa-heart,
   nav.post-controls button.has-like .fa-heart-o,
@@ -458,7 +464,8 @@ regexp("https?://discourse\\.\\S*") {
     box-shadow: 0 0 6px 0 var(--main-color);
   }
   .atom-io-navigation a:hover, .topic-list .topic-list-item-separator td span,
-  .timeline-container .topic-timeline .timeline-last-read i.progress {
+  .timeline-container .topic-timeline .timeline-last-read i.progress,
+  .timeline-container .topic-timeline .timeline-last-read .progress {
     color: var(--main-color) !important;
   }
   .is-highlighted, li.select-box-kit-row.is-highlighted,
@@ -473,10 +480,11 @@ regexp("https?://discourse\\.\\S*") {
     background: var(--main-color) !important;
   }
   .nav-pills > li.active > a, .nav-pills > li > a.active,
-  .topic-list .topic-list-item-separator td,
-  .timeline-container .topic-timeline .timeline-scrollarea,
-  .badge-category:hover {
+  .topic-list .topic-list-item-separator td, .badge-category:hover {
     border-color: var(--main-color) !important;
+  }
+  .timeline-container .topic-timeline .timeline-scrollarea {
+    border-color: rgba(var(--main-color-rgb, .7)) !important;
   }
   .d-header {
     box-shadow: none !important;
