Add domain forum.cfx.re
Forum for the modding group behind FiveM and RedM.

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -65,6 +65,7 @@ domain("twittercommunity.com"),
 domain("ubuntu-mate.community"),
 domain("users.rust-lang.org"),
 domain("zegist.com"),
+domain("forum.cfx.re"),
 url-prefix("https://nomadlist.com/forum/"),
 url-prefix("https://nomadlist.com/top-bar.php?iframe=yes"),
 url-prefix("https://www.freecodecamp.org/forum/"),
