Add domain forums.balena.io

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -66,6 +66,7 @@ domain("ubuntu-mate.community"),
 domain("users.rust-lang.org"),
 domain("zegist.com"),
 domain("forum.cfx.re"),
+domain("forums.balena.io"),
 url-prefix("https://nomadlist.com/forum/"),
 url-prefix("https://nomadlist.com/top-bar.php?iframe=yes"),
 url-prefix("https://www.freecodecamp.org/forum/"),
