Add community.grafana.com domain

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -67,6 +67,7 @@ domain("users.rust-lang.org"),
 domain("zegist.com"),
 domain("forum.cfx.re"),
 domain("forums.balena.io"),
+domain("community.grafana.com"),
 url-prefix("https://nomadlist.com/forum/"),
 url-prefix("https://nomadlist.com/top-bar.php?iframe=yes"),
 url-prefix("https://www.freecodecamp.org/forum/"),
