Add community.influxdata.com domain

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -68,6 +68,7 @@ domain("zegist.com"),
 domain("forum.cfx.re"),
 domain("forums.balena.io"),
 domain("community.grafana.com"),
+domain("community.influxdata.com"),
 url-prefix("https://nomadlist.com/forum/"),
 url-prefix("https://nomadlist.com/top-bar.php?iframe=yes"),
 url-prefix("https://www.freecodecamp.org/forum/"),
