regexp a chunk of domains re: #18
also rearrange some entries in prep for more of this

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -11,15 +11,20 @@
 @advanced color main-color "Main color" #07c
 @preprocessor uso
 ==/UserStyle== */
-@-moz-document domain("discourse.mozilla.org"),
+@-moz-document regexp("^https://(forum|forums)\\.(balena|infamous|sentry|snapcraft)\\.io/(?!embed/comments).*$"),
+regexp("^https://(forum|forums)\\.(woot|urbackup|swift|meteor|vuejs|talksurf|sublimetext|docker|mattermost|manjaro|level1techs|keyboardmaestro|ionicframeworitlab|f-droid|breadtopia|endeavouros)\\.(com|org)/(?!embed/comments).*$"),
+domain("discourse.mozilla.org"),
 domain("bbs.boingboing.net"),
 domain("community.bevoya.com"),
 domain("community.bitwarden.com"),
 domain("community.cloudflare.com"),
 domain("community.letsencrypt.org"),
-domain("community.home-assistant.io"),
 domain("community.thunkable.com"),
 domain("community.transifex.com"),
+domain("community.grafana.com"),
+domain("community.influxdata.com"),
+domain("community.home-assistant.io"),
+domain("education.github.community"),
 domain("community.gitpod.io"),
 domain("discuss.atom.io"),
 domain("discuss.codemirror.net"),
@@ -28,47 +33,23 @@ domain("discuss.flexget.com"),
 domain("discuss.howtogeek.com"),
 domain("discuss.huel.com"),
 domain("discuss.ocaml.org"),
-domain("education.github.community"),
 domain("internals.rust-lang.org"),
-domain("forum.breadtopia.com"),
-domain("forum.endeavouros.com"),
-domain("forum.f-droid.org"),
-domain("forum.gitlab.com"),
 domain("forum.glyphsapp.com"),
-domain("forum.ionicframework.com"),
-domain("forum.keyboardmaestro.com"),
-domain("forum.level1techs.com"),
-domain("forum.manjaro.org"),
-domain("forum.mattermost.org"),
-domain("forum.sentry.io"),
-domain("forum.snapcraft.io"),
-domain("forum.sublimetext.com"),
 domain("forum.syncthing.net"),
-domain("forum.talksurf.com"),
-domain("forum.vuejs.org"),
-domain("forums.docker.com"),
 domain("forums.habitat.sh"),
-domain("forums.infamous.io"),
-domain("forums.meteor.com"),
 domain("forums.puri.sm"),
 domain("forums.sonarr.tv"),
 domain("forums.spongepowered.org"),
 domain("docs.spongepowered.org"),
-domain("forums.swift.org"),
-domain("forums.urbackup.org"),
-domain("forums.woot.com"),
 domain("meta.discourse.org"),
-domain("ruby-forum.com"),
 domain("talk.commonmark.org"),
-domain("talk.makeict.org"),
+domain("forum.cfx.re"),
 domain("twittercommunity.com"),
 domain("ubuntu-mate.community"),
 domain("users.rust-lang.org"),
+domain("talk.makeict.org"),
 domain("zegist.com"),
-domain("forum.cfx.re"),
-domain("forums.balena.io"),
-domain("community.grafana.com"),
-domain("community.influxdata.com"),
+domain("ruby-forum.com"),
 url-prefix("https://nomadlist.com/forum/"),
 url-prefix("https://nomadlist.com/top-bar.php?iframe=yes"),
 url-prefix("https://www.freecodecamp.org/forum/"),
