convert community.<site>.com/org + move

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -12,18 +12,9 @@
 @preprocessor uso
 ==/UserStyle== */
 @-moz-document regexp("^https://(forum|forums)\\.(balena|infamous|sentry|snapcraft)\\.io/(?!embed/comments).*$"),
+regexp("^https://community\\.(home-assistant|influxdata|grafana|transifex|thunkable|letsencrypt|cloudflare|bitwarden|bevoya)\\.(com|org|io)/(?!embed/comments).*$"),
 regexp("^https://(forum|forums)\\.(woot|urbackup|swift|meteor|vuejs|talksurf|sublimetext|docker|mattermost|manjaro|level1techs|keyboardmaestro|ionicframeworitlab|f-droid|breadtopia|endeavouros)\\.(com|org)/(?!embed/comments).*$"),
 domain("discourse.mozilla.org"),
-domain("bbs.boingboing.net"),
-domain("community.bevoya.com"),
-domain("community.bitwarden.com"),
-domain("community.cloudflare.com"),
-domain("community.letsencrypt.org"),
-domain("community.thunkable.com"),
-domain("community.transifex.com"),
-domain("community.grafana.com"),
-domain("community.influxdata.com"),
-domain("community.home-assistant.io"),
 domain("education.github.community"),
 domain("community.gitpod.io"),
 domain("discuss.atom.io"),
@@ -34,6 +25,7 @@ domain("discuss.howtogeek.com"),
 domain("discuss.huel.com"),
 domain("discuss.ocaml.org"),
 domain("internals.rust-lang.org"),
+domain("bbs.boingboing.net"),
 domain("forum.syncthing.net"),
 domain("forums.habitat.sh"),
 domain("forums.puri.sm"),
