--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -13,7 +13,7 @@
 ==/UserStyle== */
 @-moz-document regexp("^https://(forum|forums)\\.(balena|infamous|sentry|snapcraft)\\.io/(?!embed/comments).*$"),
 regexp("^https://community\\.(gitpod|home-assistant|influxdata|grafana|transifex|thunkable|letsencrypt|cloudflare|bitwarden|bevoya)\\.(com|org|io)/(?!embed/comments).*$"),
-regexp("^https://(forum|forums)\\.(woot|urbackup|swift|meteor|vuejs|talksurf|sublimetext|docker|mattermost|manjaro|level1techs|keyboardmaestro|ionicframeworitlab|f-droid|breadtopia|endeavouros)\\.(com|org)/(?!embed/comments).*$"),
+regexp("^https://(forum|forums)\\.(gitlab|ionicframework|woot|urbackup|swift|meteor|vuejs|talksurf|sublimetext|docker|mattermost|manjaro|level1techs|keyboardmaestro|ionicframeworitlab|f-droid|breadtopia|endeavouros)\\.(com|org)/(?!embed/comments).*$"),
 domain("discourse.mozilla.org"),
 domain("education.github.community"),
 domain("discuss.atom.io"),
