regexp conversions exclude embedded comments too

--- a/discourse-dark.user.css
+++ b/discourse-dark.user.css
@@ -11,40 +11,25 @@
 @advanced color main-color "Main color" #07c
 @preprocessor uso
 ==/UserStyle== */
-@-moz-document regexp("^https://(forum|forums)\\.(balena|infamous|sentry|snapcraft)\\.io/(?!embed/comments).*$"),
-regexp("^https://community\\.(gitpod|home-assistant|influxdata|grafana|transifex|thunkable|letsencrypt|cloudflare|bitwarden|bevoya)\\.(com|org|io)/(?!embed/comments).*$"),
-regexp("^https://(forum|forums)\\.(gitlab|ionicframework|woot|urbackup|swift|meteor|vuejs|talksurf|sublimetext|docker|mattermost|manjaro|level1techs|keyboardmaestro|ionicframeworitlab|f-droid|breadtopia|endeavouros)\\.(com|org)/(?!embed/comments).*$"),
-domain("discourse.mozilla.org"),
-domain("education.github.community"),
-domain("discuss.atom.io"),
-domain("discuss.codemirror.net"),
-domain("discuss.elastic.co"),
-domain("discuss.flexget.com"),
-domain("discuss.howtogeek.com"),
-domain("discuss.huel.com"),
-domain("discuss.ocaml.org"),
+@-moz-document regexp("^https://(forum|forums)\.(balena|infamous|sentry|snapcraft)\.io/(?!embed/comments).*$"),
+regexp("^https://community\.(gitpod|home-assistant|influxdata|grafana|transifex|thunkable|letsencrypt|cloudflare|bitwarden|bevoya)\\.(com|org|io)/(?!embed/comments).*$"),
+regexp("^https://(forum|forums)\.(gitlab|ionicframework|woot|urbackup|swift|meteor|vuejs|talksurf|sublimetext|docker|mattermost|manjaro|level1techs|keyboardmaestro|ionicframeworitlab|f-droid|breadtopia|endeavouros)\\.(com|org)/(?!embed/comments).*$"),
+regexp("^https://(docs|forums)\.spongepowered\.org/(?!embed/comments).*$"),
+regexp("^https://(meta|talk)\.(discourse|commonmark)\.org/(?!embed/comments).*$"),
+regexp("^https://discuss\.(atom|codemirror|elastic|flexget|huel|ocaml)\.(io|org|co|com|net)/(?!embed/comments).*$"),
+regexp("^https://(forum|forums)\.(syncthing|habitat|puri|sonarr|cfx)\.(net|sh|sm|tv|re)/(?!embed/comments).*$"),
+regexp("^https://(\w+\.ruby-forum|zegist)\.com/(?!embed/comments).*$"),
+regexp("^https://nomadlist.com/(?!embed/comments).*$"),
 regexp("https?://discourse\\.\\S*/(?!embed/comments).*$"),
 domain("internals.rust-lang.org"),
 domain("bbs.boingboing.net"),
-domain("forum.syncthing.net"),
-domain("forums.habitat.sh"),
-domain("forums.puri.sm"),
-domain("forums.sonarr.tv"),
-domain("forums.spongepowered.org"),
-domain("docs.spongepowered.org"),
-domain("meta.discourse.org"),
-domain("talk.commonmark.org"),
-domain("forum.cfx.re"),
 domain("twittercommunity.com"),
+domain("education.github.community"),
 domain("ubuntu-mate.community"),
 domain("users.rust-lang.org"),
 domain("talk.makeict.org"),
-domain("zegist.com"),
-domain("ruby-forum.com"),
-url-prefix("https://nomadlist.com/forum/"),
-url-prefix("https://nomadlist.com/top-bar.php?iframe=yes"),
 url-prefix("https://www.freecodecamp.org/forum/"),
-url-prefix("https://www.sitepoint.com/community/"),
+url-prefix("https://www.sitepoint.com/community/") {
   :root {
     --main-color: /*[[main-color]]*/;
   }
